--- a/app/landing/index.html
+++ b/app/landing/index.html
@@ -35,23 +35,23 @@
 				<div class="flex flex-row flex-wrap justify-center gap-3 pb-5 select-none">
 					<div class="flex flex-col">
 						<label class="mb-1" id="password_label1">Password</label>
-						<input class="input1" type="password" id="password_input1" spellcheck="false" />
-						<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 relative -top-10 cursor-pointer left-[250px]" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_0">
+						<input class="input" type="password" id="password_input1" spellcheck="false" />
+						<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 relative top-[-68px] cursor-pointer left-[250px]" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_0">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
 						</svg>
-						<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 relative -top-10 cursor-pointer left-[250px] hidden" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_01">
+						<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 relative top-[-68px] cursor-pointer left-[250px] hidden" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_01">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21" />
 						</svg>
 					</div>
 					<div class="flex flex-col">
 						<label class="mb-1" id="password_label2">Confirm password</label>
-						<input class="input1" type="password" id="password_input2" spellcheck="false" />
-						<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 relative -top-10 cursor-pointer left-[250px]" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_1">
+						<input class="input" type="password" id="password_input2" spellcheck="false" />
+						<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 relative top-[-68px] cursor-pointer left-[250px]" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_1">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
 						</svg>
-						<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 relative -top-10 cursor-pointer left-[250px] hidden" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_11">
+						<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 relative top-[-68px] cursor-pointer left-[250px] hidden" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_11">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21" />
 						</svg>
 					</div>
@@ -95,7 +95,7 @@
 
 					<h3>Use new encryption method</h3>
 					<h4>A new more secure encryption method for your codes (Default after 2.7.0).</h4>
-					<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
+					<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
 						<div class="relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
 							<input checked onclick="encryptionMethodToggle()" id="tgl0" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
 							<label for="tgl0" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label>
