Style fixes, update screenshots

--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -478,7 +478,7 @@
 								<div class="flex justify-center items-center">
 									<input class="input" disabled type="text" id="hk13_input" />
 								</div>
-								<div class="flex justify-center items-center mb-10 mt-5 gap2">
+								<div class="flex justify-center items-center mb-10 mt-5 gap-2">
 									<button class="buttonr button" id="hk13_button_edit" onclick="hk_edit(13)">
 										<svg id="hk13_svg_edit" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 											<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
@@ -919,7 +919,7 @@
 									</a>
 								</div>
 							</div>
-							<h4 class="text-popup-yellow font-bold">This feature is WIP! It might be unstable or buggy!</h4>
+							<h4 class="text-popup-yellow font-bold mb-0">This feature is WIP! It might be unstable or buggy!</h4>
 							<br />
 							<hr />
 							<h3>Use webcam for import</h3>
@@ -932,8 +932,8 @@
 								></a>
 								<span id="tgt8" class="text-black text-xl">-</span>
 							</div>
-							<h4 class="text-popup-yellow font-bold">This feature is WIP! It might be unstable or buggy!</h4>
-							<!-- <h4 class="text-popup-red font-bold">This feature is WIP! Use it at your own risk!</h4> -->
+							<h4 class="text-popup-yellow font-bold mb-0">This feature is WIP! It might be unstable or buggy!</h4>
+							<!-- <h4 class="text-popup-red font-bold mb-0">This feature is WIP! Use it at your own risk!</h4> -->
 						</div>
 					</div>
 				</div>
