--- a/app/confirm/index.html
+++ b/app/confirm/index.html
@@ -30,12 +30,12 @@
 				<h4 id="text">Please enter your password to continue!</h4>
 				<div class="flex flex-col justify-center items-center">
 					<label class="mb-1" id="password_label1">Password</label>
-					<input class="input1" type="password" id="password_input" spellcheck="false" />
-					<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 relative -top-9 cursor-pointer left-32" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_0">
+					<input class="input" type="password" id="password_input" spellcheck="false" />
+					<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 relative top-[-45px] cursor-pointer left-[120px]" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_0">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
 					</svg>
-					<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 relative -top-9 cursor-pointer left-32 hidden" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_01">
+					<svg tabindex="0" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 relative top-[-45px] cursor-pointer left-[120px] hidden" fill="none" viewBox="0 0 24 24" stroke="black" id="show_pass_01">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21" />
 					</svg>
 					<div>
@@ -56,12 +56,12 @@
 			<div id="more_options" class="mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20 mb-20 pb-10 pt-1 animation invisible hidden">
 				<div>
 					<h3>Forgot password?</h3>
-					<h4>If you have a backup code you can recover your password. If you don't have one then try to think harder.</h4>
+					<h4>If you have a backup key you can recover your password. If you don't have one there is no way to decrypt your codes, try to remember your password.</h4>
 					<button onclick="forgotPassword()" class="buttoni">
 						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 21h7a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v11m0 5l4.879-4.879m0 0a3 3 0 104.243-4.242 3 3 0 00-4.243 4.242z" />
 						</svg>
-						Confirm
+						Choose backup file
 					</button>
 				</div>
 			</div>
