Option to delete all codes on edit page

--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -72,6 +72,7 @@
 							</svg>
 							Save modification(s)
 						</button>
+
 						<button class="buttoni" onclick="addMore()">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
@@ -82,12 +83,19 @@
 					<div class="mx-auto pb-3">
 						<details class="mb-5 transform ease-in duration-200">
 							<summary class="font-bold mb-3 cursor-pointer">More options</summary>
-							<div class="lg:space-x-3 space-y-3 pb-5">
+							<div class="flex flex-row justify-center gap-3 flex-wrap">
 								<button class="buttoni" onclick="revertChanges()">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
 									</svg>
 									Revert changes
+								</button>
+
+								<button class="buttoni" onclick="deleteCodes()">
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+									</svg>
+									Delete codes
 								</button>
 							</div>
 						</details>
