--- a/app/landing/index.html
+++ b/app/landing/index.html
@@ -91,17 +91,17 @@
 						Generate key
 					</button>
 
-					<hr />
+					<!-- <hr />
 
-					<h3>Use new encryption method</h3>
-					<h4>A new more secure encryption method for your codes (Default after 2.7.0).</h4>
+					<h3>Window capture</h3>
+					<h4>Allows screenshots and screen capture. You can record or screenshot the app.</h4>
 					<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
 						<div class="relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
-							<input checked onclick="encryptionMethodToggle()" id="tgl0" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
+							<input onclick="toggleWindowCapture()" id="tgl0" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
 							<label for="tgl0" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label>
 						</div>
-						<span id="tgt0" class="text-black text-xl">On</span>
-					</div>
+						<span id="tgt0" class="text-black text-xl">off</span>
+					</div> -->
 				</div>
 			</div>
 		</div>
