--- a/app/application/index.html
+++ b/app/application/index.html
@@ -9,7 +9,6 @@
 		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- js -->
 		<script defer src="./src/js/index.js"></script>
-		<script defer src="./src/js/save.js"></script>
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
@@ -188,7 +187,7 @@
 					<h4>Save your code(s) to your computer for future use.</h4>
 					<div class="flex flex-row items-center justify-center">
 						<div class="gap-3">
-							<button class="buttoni" onclick="saveChooser()">
+							<button class="buttoni" onclick="saveCodes()">
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
 								</svg>
