--- a/app/export/index.html
+++ b/app/export/index.html
@@ -5,7 +5,6 @@
 		<meta charset="UTF-8" />
 		<!-- js -->
 		<script defer src="./src/js/index.js"></script>
-		<script defer src="./src/js/export.js"></script>
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/dragonfly.css" />
 		<link rel="stylesheet" href="../.././src/tailwind.css" />
@@ -41,7 +40,7 @@
 			<div class="before_export mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20 mb-20">
 				<h2 class="pt-5">Export code(s)</h2>
 				<h3>If you saved your config you can export the secrets and the QR code(s).</h3>
-				<button class="buttoni but1 mb-5" id="but0" onclick="expChooser()">
+				<button class="buttoni but1 mb-5" id="but0" onclick="exportCodes()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16V4m0 0L3 8m4-4l4 4m6 0v12m0 0l4-4m-4 4l-4-4" />
 					</svg>
