--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -221,13 +221,13 @@
 							<hr />
 							<div id="disable_screen_capture_div">
 								<h3>Window capture</h3>
-								<h4>Allows screenshots and screen capture. You can record or screenshot the app.</h4>
+								<h4>Allows screenshots and screen capture. You can record or screenshot the app until you restart Authme.</h4>
 								<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
 									<div class="relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
-										<input id="tgl2" onclick="capture()" type="checkbox" class="toggle" />
+										<input id="tgl2" onclick="toggleWindowCapture()" type="checkbox" class="toggle" />
 										<label for="tgl2" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label>
 									</div>
-									<span id="tgt2" class="text-black text-xl">-</span>
+									<span id="tgt2" class="text-black text-xl">Off</span>
 								</div>
 								<hr />
 							</div>
